--- a/jee_project/src/Components/LoginPage/Login.css
+++ b/jee_project/src/Components/LoginPage/Login.css
@@ -29,6 +29,9 @@
     padding: 4rem;
     border-radius: 10px;
     position: relative;
+    display: flex;
+    gap: 1rem;
+    flex-direction: column;
 }
 .login-card::before {
     content: '';
@@ -70,9 +73,7 @@ new-acc{
     text-decoration: underline;
 }
 
-.login-card-header {
-    margin-bottom: 2rem;
-}
+
 
 .login-card-header h1 {
     font-size: 2rem;
@@ -86,6 +87,7 @@ new-acc{
 }
 
 .login-card-form {
+    margin: 1rem 0;
     display: flex;
     flex-direction: column;
     gap: 0.7rem;
