[LINK] 🔗 linked Front with Backen

--- a/jee_project/src/Components/AddResource/AddResource.css
+++ b/jee_project/src/Components/AddResource/AddResource.css
@@ -177,7 +177,7 @@ form textarea:valid ~ button:hover{
 }
 .container .audience{
   opacity: 0;
-  transition: opacity 0.12s ease;
+  transitimn: opacity 0.12s ease;
 }
 .container.active .audience{
   opacity: 1;
