--- a/jee_project/src/Components/UserPage/User.css
+++ b/jee_project/src/Components/UserPage/User.css
@@ -6,6 +6,7 @@
 }
 .user-page-down{
     display: inline-flex;
+    margin: 2rem 0;
     width: 100%;
 }
 .user-header{
@@ -13,6 +14,7 @@
     height: 50px;
 }
 .left{
+    margin-top: 5rem;
     width: 30%;
     float: left;
 
@@ -20,7 +22,10 @@
 .right{
     width: 30%;
     float: right;
-
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 
 }
 .resource{
