--- a/jee_project/src/Components/AppBar/AppBar.css
+++ b/jee_project/src/Components/AppBar/AppBar.css
@@ -2,10 +2,10 @@
     background-color: #1A1A40;
     width: 100%;
     display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2rem;
     gap: 2rem;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 40px;
     justify-content: space-between;
     height: 80px;
 }
@@ -86,6 +86,8 @@
     padding: 10px;
     max-height: 200px;
     overflow-y: auto;
+    border: 1px solid #00000030;
+    z-index: 100;
   }
   .search-results img{
     border-radius: 50%;
