--- a/jee_project/src/Components/FollowingResources/FollowingResources.css
+++ b/jee_project/src/Components/FollowingResources/FollowingResources.css
@@ -1,23 +1,41 @@
 .home-page-resources{
     display: inline-block;
-    width: 90%;
+    width: 100%;
     background-color: #fff;
     justify-content: center;
-    margin-top: 80px;
-    margin-left: 20px;
     border-radius: 10px;
-    padding-left: 30px;
-    padding-top: 20px;
-    box-shadow: 3px 3px 3px 3px#edecec;
- 
-
+    padding: 1rem;
+    box-shadow: 0 0 10px 1px#00000022;
 }
 .resource-user-profile{
     display: flex;
     align-items: center;
     gap: 10px;
+    margin-bottom: 1rem;
+}
+.download-button{
+    background-color: #7A0BC0;
+    color: #fff;
+    margin-top: 1.5rem;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    font-size: 15px;
+    font-family: 'Roboto' sans-serif;
+    cursor: pointer;
+    border: 1px solid #7A0BC0;
+    transition: 0.3s;
+}
+.download-button:hover{
+    background-color: #fff;
+    color: #7A0BC0;
 }
 
+.resource-user-info{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
 .resource-user-profile img{
     border-radius: 50%;
     width: 3rem;
@@ -32,18 +50,12 @@
 .resource-user-info p,h4{
     font-size: 15px;
     font-family: 'Roboto' sans-serif;
-    margin-left: 64px;
-    margin-top: 10px;
 }
 
 .resource-user-info img{
     width: 13cm;
     height: 8cm;
     border-radius: 10px;
-    margin-left: 2.5cm;
-    margin-bottom: 1.5cm;
-    margin-top: 1.5cm;
- 
 }
 .resource-user-profile a{
     background: none;
