--- a/jee_project/src/Components/ProfilePage/profile.css
+++ b/jee_project/src/Components/ProfilePage/profile.css
@@ -1,13 +1,11 @@
 .user-profile{
     background-color: #1A1A40;
-    height: 300px;
-    padding-top: 12%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    
-
+    padding: 5rem 0 1.5rem 0;
+    color: white;
 }
 .user-profile p{
    font-weight: bold;
@@ -22,6 +20,7 @@
 }
 
 .user-profile img {
+    box-shadow: 0 0 50px #dfbdff;
     border-radius: 50%;
     width: 10rem;
     height: 10rem;
@@ -30,24 +29,26 @@
 
 .user-profile-down{
     display: flex;
-    gap: 3rem;
+    justify-content: space-between;
     width: 100%;
     height: 100%;
-    margin-top: 100px;
+    margin-top: 3rem;
 
 
 }
 .user-info{
-
-    width: 30%;
+    margin-top: 5rem;
+    width: 25%;
     float: left
 }
-.user-resource{ 
-    width: 70%;
-
+.user-resource{
+    width: 50%;
 }
 .user-following{
-
-    width: 30%;
+    margin-top: 5rem;
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
     float: right;
 }
